@@ -5,7 +5,10 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withStatus;
 
 import java.io.IOException;
-import java.net.*;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
@@ -100,8 +103,8 @@ public class BambooRequestMockProvider {
     /**
      * This method mocks that the programming exercise with the same project name already exists (depending on the boolean input exists), based on the programming exercise title
      *
-     * @param exercise the programming exercise that might already exist
-     * @param exists   whether the programming exercise with the same title exists
+     * @param exercise   the programming exercise that might already exist
+     * @param exists     whether the programming exercise with the same title exists
      * @param shouldFail if the request to get latest project should fail
      * @throws IOException        an IO exception when reading test files
      * @throws URISyntaxException exceptions related to URI handling in test REST calls
@@ -329,11 +332,11 @@ public class BambooRequestMockProvider {
     /**
      * This method mocks that the artifact page the latest build result is empty
      */
-    public void mockRetrieveEmptyArtifactPage() throws URISyntaxException, MalformedURLException {
+    public void mockRetrieveEmptyArtifactPage() throws URISyntaxException {
         var indexOfResponse = "href=\"/download/1\"";
         var noArtifactsResponse = "";
-        final var uri = new URL(bambooServerUrl + "/download/").toURI();
-        final var uri2 = new URL(bambooServerUrl + "/download/1").toURI();
+        final var uri = new URI(bambooServerUrl + "/download/");
+        final var uri2 = new URI(bambooServerUrl + "/download/1");
 
         mockServer.expect(requestTo(uri)).andExpect(method(HttpMethod.GET)).andRespond(withStatus(HttpStatus.OK).contentType(MediaType.TEXT_HTML).body(indexOfResponse));
         mockServer.expect(requestTo(uri2)).andExpect(method(HttpMethod.GET))
